k8s-second-project/second-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: second-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /story
        pathType: Prefix
        backend:
          service:
            name: second-app-service
            port:
              number: 8000
